--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ubong's Portfolio Project</title>
  </head>
  <body>
     <h1>Ubong Elijah's Portfolio</h1>
